# donkeyid

./: .gitignore  CMakeLists.txt  CREDITS  Donkeyid.php  README.md  config.m4  config.w32  donkey_id.c  donkey_id.h  donkeyid.c  donkeyid.php  donkeyid2.c  donkeyid2.h  donkeytest.php  php_donkeyid.h  php_wrapper.h
dongkeyid_server/: HttpServer.class.php  Route.class.php  config.php  main.php
donkeyid/: CMakeLists.txt  donkeyid.c  donkeytest.php  php_donkeyid.h  php_wrapper.h
donkeyid/src/: donkeyid.c  donkeyid.h  shm.c  shm.h  spinlock.c
donkeyid/tests/: main.c
donkeyid_server/: HttpServer.class.php  Route.class.php  config.php  main.php
src/: donkeyid.c  donkeyid.h  shm.c  shm.h  spinlock.c  spinlock.h
tests/: 001.phpt  main.c
